apps/ext/bazarr/endpoints.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: bazarr
  namespace: ext
subsets:
- addresses:
  - ip: 10.0.0.10
  ports:
  - name: app
    port: 9767
    protocol: TCP
