apps/ext/bazarr/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: bazarr
    namespace: ext
spec:
  ports:
  - name: app
    port: 80
    protocol: TCP
    targetPort: 9767
  clusterIP: None
  type: ClusterIP
