apps/ext/bazarr/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
 name: bazarr-http
 namespace: ext
spec:
 entryPoints:
  - web
 routes:
  - match: Host(`bazarr.absolutist.it`) || Host(`bazarr.wahoo.li`)
    kind: Rule
    middlewares:
    - name: https-only
      namespace: traefik
    services:
     - name: bazarr
       port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
 name: bazarr-https
 namespace: ext
spec:
 entryPoints:
  - websecure
 routes:
  - match: Host(`bazarr.absolutist.it`) || Host(`bazarr.wahoo.li`)
    kind: Rule
    priority: 10
    middlewares:
    - name: forwarded-proto-https
      namespace: traefik
    - name: gzip
      namespace: traefik
    - name: authentik
      namespace: traefik
    services:
     - name: bazarr
       scheme: http
       port: 80
 tls:
  secretName: tls-bazarr-ingress
